<resources>
    <string name="app_name">spotify-angular</string>
    <string name="preferencias">Preferencias</string>
    <string name="ltima_escuchada">última escuchada</string>
    <string name="buscar">buscar</string>
    <string name="acerca_de">Acerca de ...</string>
    <string name="g_neros_y_estados_de_nimo">Géneros y estados de ánimo</string>
    <string name="drawer_open">Navigation Drawer opened</string>
    <string name="drawer_close">Navigation Drawer closed</string>
    <string name="search">Buscar</string>
    <string name="explorar">Explorar</string>
    <string name="radio">Radio</string>
    <string name="your_music">Tu Música</string>
    <string name="spotify_login_fail_title">Fallo al iniciar sesión</string>
    <string name="spotify_login_fail_message">Error al iniciar sesión en Spotify</string>
    <string name="not_follow">Follow</string>
    <string name="follow">Following</string>
    <string name="playlist_followers_and_user" formatted="false">%d FOLLOWERS. BY %s </string>

    <string name="new_releases_subtitle">Nuevos Lanzamientos</string>

    <!-- Explorer Menu Items -->
    <string name="explorer_menu_lists">Listas</string>
    <string name="explorer_menu_new_releases">Nuevos Lanzamientos</string>
    <string name="explorer_menu_discover">Discover</string>
    <string name="explorer_menu_concerts">Conciertos</string>
    <!-- Your Library Menu -->
    <string name="your_library_menu_playlist">Playlists</string>
    <string name="your_library_menu_stations">Estaciones</string>
    <string name="your_library_menu_song">Canciones</string>
    <string name="your_library_menu_albums">Albumes</string>
    <string name="your_library_menu_artists">Artistas</string>

    <string name="search_hint">Busca artistas, playlist, canciones por nombre</string>
    <string name="search_description">Busca tu canción favorita, artistas, albumes, podcast, playlists y amigos</string>
    <string name="search_not_result_found_primary" formatted="false">Ningún resultado encontrado para %s</string>
    <string name="search_not_result_found_secondary">Por favor, compruebe que tiene la ortografía correcta o prueba con otras palabras</string>
    <!-- Search Results Titles -->
    <string name="search_result_artists">Artistas</string>
    <string name="search_result_albums">Albumes</string>
    <string name="search_result_playlist">Playlists</string>
    <string name="search_result_tracks">Pistas</string>

    <!-- Search Results Sea all -->
    <string name="see_all_artists">Ver todos los artistas</string>
    <string name="see_all_albums">Ver todos los albumes</string>
    <string name="see_all_playlist">Ver todas las playlist</string>
    <string name="see_all_tracks">Ver todas las pistas</string>

    <!-- See all results -->
    <string formatted="false" name="see_all_artists_title">%s EN ARTISTAS</string>
    <string formatted="false" name="see_all_artists_playlist_title">%s EN PLAYLIST</string>
    <string formatted="false" name="see_all_artists_albums_title">%s EN ALBUMES</string>
    <string formatted="false" name="see_all_artists_tracks_title">%s EN CANCIONES</string>

    <!-- Fragments Titles -->
    <string name="new_releases_fragment_title">Nuevos Lanzamientos</string>
    <string name="my_playlists">Mis Playlists</string>

    <!-- Errors -->
    <string name="search_artist_status_code_400">No se han encontrado más artistas</string>
    <string name="search_artist_status_code_500">Error al obtener los artistas</string>
    <string name="search_albums_status_code_400">No se han encontrado más albumes</string>
    <string name="search_albums_status_code_500">Error al obtener los albumes</string>
    <string name="search_tracks_status_code_400">No se han encontrado más pistas</string>
    <string name="search_tracks_status_code_500">Error al obtener las pistas</string>
    <string name="search_playlist_status_code_400">No se han encontrado más playlists</string>
    <string name="search_playlist_status_code_500">Error al obtener las pistas</string>
    <string name="add_playlists">Crear Playlist</string>

    <!-- Dialogs -->
    <string name="create_playlist_title">Crear nueva Playlist</string>
    <string name="create_playlist_hint">Nombre de la playlist</string>
    <string name="cancel_create_playlist">Cancelar</string>
    <string name="create_playlist">Crear</string>
    <string name="playlist_name_not_empty">Debes proporcionar un nombre</string>


</resources>
