<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/search"
            android:checked="true"/>
        <item
            android:id="@+id/nav_explorer"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/explorar" />
        <item
            android:id="@+id/nav_radio"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/radio" />
        <item
            android:id="@+id/nav_your_music"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/your_music" />
    </group>
</menu>